k8s/mailhog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
    traefik.enable: "true"
    traefik.http.routers.mailhog.entrypoints: websecure
    traefik.http.routers.mailhog.rule: Host("mail.local.pfdev.de")
    traefik.http.routers.mailhog.tls.certresolver: default
    traefik.http.services.mailhog.loadbalancer.server.port: "8025"
  creationTimestamp: null
  labels:
    io.kompose.service: mailhog
  name: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mailhog
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.22.0 (HEAD)
        traefik.enable: "true"
        traefik.http.routers.mailhog.entrypoints: websecure
        traefik.http.routers.mailhog.rule: Host("mail.local.pfdev.de")
        traefik.http.routers.mailhog.tls.certresolver: default
        traefik.http.services.mailhog.loadbalancer.server.port: "8025"
      creationTimestamp: null
      labels:
        io.kompose.network/internal: "true"
        io.kompose.network/web: "true"
        io.kompose.service: mailhog
    spec:
      containers:
        - image: mailhog/mailhog:latest
          name: mailhog
          resources: {}
      restartPolicy: Always
status: {}
