k8s/memcached-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: memcached
  name: memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: memcached
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/internal: "true"
        io.kompose.service: memcached
    spec:
      containers:
        - image: memcached:alpine
          name: memcached
          resources: {}
      restartPolicy: Always
status: {}
