k8s/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (HEAD)
    traefik.enable: "true"
    traefik.http.middlewares.redirect-to-https.redirectscheme.scheme: https
    traefik.http.routers.http-catchall.entrypoints: web
    traefik.http.routers.http-catchall.middlewares: redirect-to-https@docker
    traefik.http.routers.http-catchall.rule: hostregexp(`{host:.+}`)
    traefik.http.routers.https-catchall.entrypoints: websecure
    traefik.http.routers.https-catchall.middlewares: errorpage@docker
    traefik.http.routers.https-catchall.rule: hostregexp(`{host:.+}`)
  creationTimestamp: null
  labels:
    io.kompose.service: traefik
  name: traefik
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "443"
      port: 443
      targetPort: 443
    - name: "8082"
      port: 8082
      targetPort: 8080
  selector:
    io.kompose.service: traefik
status:
  loadBalancer: {}
